After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707519 - Missing introspection annotations
Missing introspection annotations
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Documentation
3.9.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 707509 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-09-04 23:35 UTC by Phil Clayton
Modified: 2013-09-10 21:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add missing introspection annotations (7.42 KB, patch)
2013-09-05 00:36 UTC, Phil Clayton
committed Details | Review

Description Phil Clayton 2013-09-04 23:35:42 UTC
Introspection annotations need adding as follows.  The following function parameters have missing (out) annotations:

gtkaccelgroup.c
gtk_accel_group_query: n_entries  -- add (out)

gtkcellarea.c
gtk_cell_area_class_list_cell_properties: n_properties  -- add (out)

gtkclipboard.c
gtk_clipboard_wait_for_rich_text: length  -- add (out)
gtk_clipboard_wait_for_targets: n_targets  -- add (out)

gtkrecentchooser.c
gtk_recent_chooser_get_uris: length  -- add (out)

gtkselection.c
gtk_target_list_find: info  -- add (out)

gtktextbufferrichtext.c
gtk_text_buffer_get_serialize_formats: n_formats  -- add (out)
gtk_text_buffer_get_deserialize_formats: n_formats  -- add (out)
gtk_text_buffer_serialize: length  -- add (out)

gtktreemodel.c
gtk_tree_path_get_indices_with_depth: depth  -- add (out)

gtkwidget.c
gtk_widget_class_list_style_properties: n_properties  -- add (out)


The following function parameter has a missing (array ...) annotation:

gtkaccelgroup.c
gtk_accelerator_parse_with_keycode: accelerator_codes
  -- add (array zero-terminated=1) (transfer full)
  -- add comment:
      Use g_free() to free the array when it is no longer needed.
Comment 1 Phil Clayton 2013-09-04 23:37:46 UTC
*** Bug 707509 has been marked as a duplicate of this bug. ***
Comment 2 Phil Clayton 2013-09-05 00:36:28 UTC
Created attachment 254139 [details] [review]
Add missing introspection annotations

Also added (allow-none) for info parameter of gtk_target_list_find according to existing comment.
Comment 3 Matthias Clasen 2013-09-08 20:50:18 UTC
Review of attachment 254139 [details] [review]:

These all look right to me, thanks
Comment 4 Matthias Clasen 2013-09-10 21:29:56 UTC
Attachment 254139 [details] pushed as 59c4fb9 - Add missing introspection annotations