Add missing introspection annotations

https://bugzilla.gnome.org/show_bug.cgi?id=707519